Bug 227373 - SVN integration does not distinguish between ignored and not changed files
Summary: SVN integration does not distinguish between ignored and not changed files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Fedora RPMs Unspecified
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-17 15:37 UTC by Felix Möller
Modified: 2010-05-04 18:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of svn st -v and dolphin showing the same files (78.85 KB, image/png)
2010-02-17 15:40 UTC, Felix Möller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Möller 2010-02-17 15:37:25 UTC
Version:            (using KDE 4.4.0)
Installed from:    Fedora RPMs

I really like the SVN integration into dolphin. Fantastic work.

One think I do not like is that all is that svn:ignores are not shown in any way.

For folder with latex stuff I allways have:
[fm@thinkpad mis]$ svn pg svn:ignore .
*.out
*.log
*.nav
*.toc
*.snm
*.aux
*.backup

See attached screenshots. These aux files are for sure not in the SVN.
Comment 1 Felix Möller 2010-02-17 15:40:39 UTC
Created attachment 40875 [details]
screenshot of svn st -v and dolphin showing the same files
Comment 2 Felix Möller 2010-02-19 01:25:11 UTC
This stuff is in <http://websvn.kde.org/trunk/KDE/kdebase/apps/dolphin/src/versioncontrol/fileviewsvnplugin.cpp?revision=1076617&view=markup>

Something like the following, which does not work yet, has to be done:
Index: src/versioncontrol/fileviewsvnplugin.cpp
===================================================================
--- src/versioncontrol/fileviewsvnplugin.cpp	(Revision 1092447)
+++ src/versioncontrol/fileviewsvnplugin.cpp	(Arbeitskopie)
@@ -113,7 +113,7 @@
     }
 
     QStringList arguments;
-    arguments << "status" << "--show-updates" << directory;
+    arguments << "status" << "--show-updates --no-ignore" << directory;
 
     QProcess process;
     process.start("svn", arguments);
@@ -129,6 +129,8 @@
             case 'A': state = AddedVersion; break;
             case 'D': state = RemovedVersion; break;
             case 'C': state = ConflictingVersion; break;
+            // items which are matched by an svn:ignore are similar to unversioned ones
+            case 'I': state = UnversionedVersion; break;
             default:
                 if (filePath.contains('*')) {
                     state = UpdateRequiredVersion;
Comment 3 Peter Penz 2010-05-01 20:00:23 UTC
SVN commit 1121567 by ppenz:

Don't show svn:ignores as versioned files. Thanks to Felix Möller for the patch!

BUG: 227373

 M  +2 -1      fileviewsvnplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121567
Comment 4 Felix Möller 2010-05-03 17:51:45 UTC
If I am not mistaken, the patch is not applied to the 4.4 series.

I.e. I cannot find it at <http://websvn.kde.org/branches/KDE/4.4/kdebase/apps/dolphin/src/versioncontrol/fileviewsvnplugin.cpp> I think a backport would be nice.
Comment 5 Peter Penz 2010-05-04 18:13:21 UTC
SVN commit 1122762 by ppenz:

Backport SVN commit 1121567: Don't show svn:ignores as versioned files. Thanks to Felix Möller for the patch!

CCBUG: 227373

 M  +2 -1      fileviewsvnplugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1122762