Don't show svn:ignores as versioned files. Thanks to Felix Möller for the patch!

BUG: 227373

svn path=/trunk/KDE/kdesdk/dolphin-plugins/; revision=1121567